@@ -327,6 +327,8 @@ Core and Builtins
 Library
 -------
 
+- Issue 1326077: fix the formatting of SyntaxErrors by the traceback module.
+
 - Issue #1665206 (partially): Move imports in cgitb to the top of the module
   instead of performing them in functions. Helps prevent import deadlocking in
   threads.
